[package]
name = "lpa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
chrono = "0.4.31"
cidr-utils = "0.5.11"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.29"
influxdb2 = "0.4.4"
prost = "0.12.1"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
size_format = "1.0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[build-dependencies]
prost = "0.12.1"
prost-build = "0.12.1"
vergen = { version = "7.5", features = ["git", "rustc", "cargo"] }

